# rust-people-db

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs  install.sh
data/: people-db.gtk-desktop
examples/: people.csv
locales/en_CA/: people-db.po
locales/en_GB/LC_MESSAGES/: people-db.po
locales/es/: people-db.po
src/: cli.rs  com.github.arickp.rustpeopledb.yml  constants.rs  gui.rs  main.rs  person.rs
