[package]
name = "rust-people-db"
version = "1.0.0"
edition = "2021"
authors = ["Eric Popelka"]
description = "Tool for managing a simple database of people. Database is stored as a CSV file on the local filesystem."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
rustyline = "14.0"
inquire = "0.6"
tabled = "0.15"
gtk = { version = "0.8", package = "gtk4" }
glib = "0.18"
gio = "0.18"
log = "0.4"
env_logger = "0.11"
gettext-rs = "0.7"
regex = "1.10"

[[bin]]
name = "people-db"
path = "src/main.rs"

doc = false

[[bin]]
name = "people-db-gtk"
path = "src/gui.rs"
doc = false
